net: Make net:extras a component instead of a static library.

net:extras is currently linked into multiple shared libraries used
by Chrome in a component build. That prevents adding a base::Feature
member into a net:extras source file, because there are runtime
checks that a feature is only defined once.

This CL makes net:extras a component rather than a static library.
This ensure that there is only one copy of net:extras in memory
when running a Chrome component build.

Bug: 878222
Change-Id: I9f6c87171f7fc68f3f1e62b879f8387f3985f4f8
Reviewed-on: https://chromium-review.googlesource.com/1225308
Reviewed-by: Matt Menke <mmenke@chromium.org>
Reviewed-by: Victor Costan <pwnall@chromium.org>
Commit-Queue: François Doray <fdoray@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591781}