net/extras/sqlite/sqlite_persistent_cookie_store.h
@@ -12,6 +12,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <vector>
 
 #include "base/callback_forward.h"
+#include "base/component_export.h"
 #include "base/macros.h"
 #include "base/memory/ref_counted.h"
 #include "net/cookies/cookie_monster.h"
@@ -29,7 +30,7 @@ class CookieCryptoDelegate;
 // Implements the PersistentCookieStore interface in terms of a SQLite database.
 // For documentation about the actual member functions consult the documentation
 // of the parent class |CookieMonster::PersistentCookieStore|.
-class SQLitePersistentCookieStore
+class COMPONENT_EXPORT(NET_EXTRAS) SQLitePersistentCookieStore
     : public CookieMonster::PersistentCookieStore {
  public:
   // Contains the origin and a bool indicating whether or not the
